# arcium-private-voting

./: .gitignore  Anchor.toml  Arcium.toml  README.md  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  constants.ts  index.css  main.tsx  polyfills.ts
artifacts/: circuits_hash.txt  docker-compose-arx-env.yml  recovery_node_config_0.toml  recovery_node_config_1.toml  recovery_node_config_2.toml  recovery_node_config_3.toml  recovery_node_config_4.toml
artifacts/localnet/: identity_0.pem  identity_1.pem  node_0.json  node_1.json  node_bls_0.json  node_bls_1.json  node_callback_0.json  node_callback_1.json  node_x25519_0.json  node_x25519_1.json  recovery_node_0.json  recovery_node_1.json  recovery_node_2.json  recovery_node_3.json  recovery_node_4.json  recovery_node_x25519_0.json  recovery_node_x25519_1.json  recovery_node_x25519_2.json  recovery_node_x25519_3.json  td_identity.pem  (+2 more)
encrypted-ixs/: Cargo.toml  tally.rs
migrations/: deploy.ts
programs/private-voting/: Cargo.toml
programs/private-voting/src/: lib.rs
scripts/: check-callbacks.ts  check-circuit-sizes.ts  check-cluster.ts  check-comp-defs.ts  check-init-tally.ts  check-keygen-callback.ts  check-keygen.ts  check-keygen2.ts  check-offsets.ts  check-reupload-error.ts  check-zero-tally-hash.ts  debug-callback-data.ts  debug-computation.ts  fix-circuits.ts  fix-init-tally.ts  init-comp-defs.ts  inspect-computation.ts  repair-add-vote.ts  reupload-zero-tally.ts  upload-circuit-manual.ts
tests/: private-voting.ts
(+16 files in other folders)
