[package]
name = "private-voting"
version = "0.1.0"
description = "Privacy-preserving quadratic voting on Solana using Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "=0.8.5" }
arcium-macros = "=0.8.5"
arcium-anchor = "=0.8.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
